@@ -988,23 +988,23 @@ ItemOBJ = [
 ,[965,62,91,4,0,1,0,80,"Captain's Manteau","",0,13,50,19,1,57,1,0]
 ,[966,62,89,3,0,1,0,80,"Commander's Manteau","",0,13,50,19,1,57,1,0]
 ,[967,62,145,3,0,1,0,80,"Sheriff's Manteau","",0,13,50,19,1,57,1,0]
-,[968,63,91,4,0,1,0,80,"Battle Greave","",0,13,100,19,1,57,1,0]
+,[968,63,91,4,0,1,0,80,"Battle Greaves","",0,13,100,19,1,57,1,0]
 ,[969,63,89,3,0,1,0,80,"Combat Boots","",0,13,100,19,1,57,1,0]
 ,[970,63,145,3,0,1,0,80,"Battle Boots","",0,13,100,19,1,57,1,0]
-,[971,100,0,0,0,0,0,0,"[Battle Greaves & Captain's Manteau Equip Set]",0,"Increases HP Item Recovery by 10%.<br>When attacking physically, there is a chance to recover 6000HP over 10 seconds.",3,3,15,12,91,10,50,-300,51,-300,52,-300,53,-300,54,-300,55,-300,56,-300,58,-300,59,-300,0]
-,[972,100,0,0,0,0,0,0,"[Battle Greaves & Captain's Manteau Equip Set]",0,"Increases the effectiveness of [Potion Pitcher] used on you by 10%.<br/>When attacking physically, there is a chance to recover 6000HP over 10 seconds.",1,3,15,12,91,10,94,10,50,-300,51,-300,52,-300,53,-300,54,-300,55,-300,56,-300,58,-300,59,-300,0]
-,[973,100,0,0,0,0,0,0,"[Battle Greaves & Captain's Manteau Equip Set]",0,"When attacking physically, small chance to recover 3000HP over per 10 seconds",2,3,15,12,12,5,10,5,50,-300,51,-300,52,-300,53,-300,54,-300,55,-300,56,-300,58,-300,59,-300,0]
-,[974,100,0,0,0,0,0,0,"[Combat Boots & Commander's Manteau Equip Set]",0,"When receiving physical damage, there is a chance that for 10 seconds, your armor will become ghost property.",4,3,15,12,151,20,50,-300,51,-300,52,-300,53,-300,54,-300,55,-300,56,-300,58,-300,59,-300,0]
-,[975,100,0,0,0,0,0,0,"[Combat Boots & Commander's Manteau Equip Set]",0,"When receiving physical damage, there is a chance that for 10 seconds, your armor will become ghost property.",4,3,15,12,7037,50,91,10,94,10,50,-300,51,-300,52,-300,53,-300,54,-300,55,-300,56,-300,58,-300,59,-300,0]
-,[976,100,0,0,0,0,0,0,"[Combat Boots & Commander's Manteau Equip Set]",0,"",5,3,15,12,78,10,74,25,50,-300,51,-300,52,-300,53,-300,54,-300,55,-300,56,-300,58,-300,59,-300,0]
+,[971,100,0,0,0,0,0,0,"[Assaulter Plate & Battle Greaves & Captain's Manteau Equip Set]",0,"Increases Healing received from skills and items by 10%.<br>When attacking physically, there is a chance to recover 6000HP over 10 seconds.",3,3,15,12,50,-300,51,-300,52,-300,53,-300,54,-300,55,-300,56,-300,58,-300,59,-300,0]
+,[972,100,0,0,0,0,0,0,"[Elite Engineer Armor & Battle Greaves & Captain's Manteau Equip Set]",0,"Increases effectiveness of your [Potion Pitcher] by 10%.<br>Increases the effectiveness of [Heal] and [Potion Pitcher] used on you by 10%.",1,3,15,12,5065,20,50,-300,51,-300,52,-300,53,-300,54,-300,55,-300,56,-300,58,-300,59,-300,194,1,0]
+,[973,100,0,0,0,0,0,0,"[Assassin Robe & Battle Greaves & Captain's Manteau Equip Set]",0,"When attacking physically, small chance to recover 3000HP over per 10 seconds",2,3,15,12,12,5,10,5,50,-300,51,-300,52,-300,53,-300,54,-300,55,-300,56,-300,58,-300,59,-300,0]
+,[974,100,0,0,0,0,0,0,"[Warlock's Battle Robe & Combat Boots & Commander's Manteau Equip Set]",0,"When receiving physical damage, there is a chance that for 10 seconds, your armor will become ghost property.",4,3,15,12,151,20,50,-300,51,-300,52,-300,53,-300,54,-300,55,-300,56,-300,58,-300,59,-300,0]
+,[975,100,0,0,0,0,0,0,"[Medic's Robe & Combat Boots & Commander's Manteau Equip Set]",0,"When receiving physical damage, there is a chance that for 10 seconds, your armor will become ghost property.",4,3,15,12,7037,50,91,10,94,10,50,-300,51,-300,52,-300,53,-300,54,-300,55,-300,56,-300,58,-300,59,-300,0]
+,[976,100,0,0,0,0,0,0,"[Elite Archer Suit & Combat Boots & Commander's Manteau Equip Set]",0,"",5,3,15,12,78,10,74,25,50,-300,51,-300,52,-300,53,-300,54,-300,55,-300,56,-300,58,-300,59,-300,0]
 ,[977,100,0,0,0,0,0,0,"[Combat Boots & Commander's Manteau Equip Set]",0,"",5,3,15,12,78,10,74,25,50,-300,51,-300,52,-300,53,-300,54,-300,55,-300,56,-300,58,-300,59,-300,0]
-,[978,64,87,1,0,0,0,70,"Medal of Honor (Swordman)","","Add 1% chance of auto casting Stun on the enemy when attacking",89,5,8,10,13,500,14,50,0]
-,[979,64,52,1,0,0,0,70,"Medal of Honor (Thief)","","Add 1% chance of auto casting Poison on the enemy when attacking.",87,5,89,5,9,10,13,300,14,80,0]
-,[980,64,53,1,0,0,0,70,"Medal of Honor (Acolyte)","","Add 1% chance of auto casting Silence on the enemy when attacking",87,5,89,5,19,6,13,600,0]
-,[981,64,55,1,0,0,0,70,"Medal of Honor (Mage)","","Add 1% chance of auto casting Stone on the enemy when attacking.",87,5,89,5,19,6,13,600,0]
-,[982,64,54,1,0,0,0,70,"Medal of Honor (Archer)","","Add 1% chance of auto casting Blind on the enemy when attacking.",87,5,89,5,10,10,13,300,14,80,0]
-,[983,64,56,1,0,0,0,70,"Medal of Honor (Merchant)","","Add 1% chance of auto casting Curse on the enemy when attacking.",87,5,89,5,12,10,13,500,14,50,0]
-,[984,64,59,1,0,0,0,70,"Sheriff Badge","","Add 10% chance of auto casting Blind on the enemy with long-range attacks.",87,5,89,5,10,10,13,300,14,80,0]
+,[978,64,87,1,0,0,0,70,"Medal of Honor (Swordman)","","Add 1% chance of auto casting Stun on the enemy when attacking",80,5,89,5,8,10,13,500,14,50,0]
+,[979,64,52,1,0,0,0,70,"Medal of Honor (Thief)","","Add 1% chance of auto casting Poison on the enemy when attacking.",80,5,89,5,9,10,13,300,14,80,0]
+,[980,64,53,1,0,0,0,70,"Medal of Honor (Acolyte)","","Add 1% chance of auto casting Silence on the enemy when attacking",80,5,89,5,19,6,13,600,0]
+,[981,64,55,1,0,0,0,70,"Medal of Honor (Mage)","","Add 1% chance of auto casting Stone on the enemy when attacking.",80,5,89,5,19,6,13,600,0]
+,[982,64,54,1,0,0,0,70,"Medal of Honor (Archer)","","Add 1% chance of auto casting Blind on the enemy when attacking.",80,5,89,5,10,10,13,300,14,80,0]
+,[983,64,56,1,0,0,0,70,"Medal of Honor (Merchant)","","Add 1% chance of auto casting Curse on the enemy when attacking.",80,5,89,5,12,10,13,500,14,50,0]
+,[984,64,59,1,0,0,0,70,"Sheriff Badge","","Add 10% chance of auto casting Blind on the enemy with long-range attacks.",80,5,89,5,10,10,13,300,14,80,0]
 ,[985,62,1001,4,0,1,70,70,"Naght Seiger Flame Manteau","",0,15,5,89,1,19,2,43,2,0]
 ,[986,60,1079,5,0,0,170,70,"Chameleon Armor","","Increases HP and SP depending by base level.<br>Adds a chance immune from all magic skill for 2 sec When receiving magical attack.<br><b>[Swordman, Merchant, Thief Class]</b><br>DEF + 3<br><b>[Mage, Archer, Acolyte Class]</b><br>MDEF + 5",0]
 ,[987,60,1079,3,0,1,100,70,"Sprint Mail","",0,3,1,75,5,91,3,92,3,0]
@@ -1096,11 +1096,11 @@ ItemOBJ = [
 ,[1073,50,0,0,0,1,20,0,"Yellow Sheila Hairnet","","Your sexyness increases to 100%<br><b>[Refine Rate 9+]</b><br>ATK + 2%<br>MATK + 2%<br><b>[Refine Rate 10]</b><br>ATK + 2%<br>MATK + 2%",1,1,4,1,5,2,0]
 ,[1074,50,0,0,0,1,1,0,"Silver Sheila Hairnet","","Your sexyness increases to 100%<br><b>[Refine Rate 9+]</b><br>Physical Damge + 2%<br>MATK + 2%<br><b>[Refine Rate 10]</b><br>Cast Time - 10%",3,1,4,3,1,2,0]
 ,[1075,50,0,2,0,1,10,0,"Flower Hat","",0,13,80,14,20,0]
-,[1076,1,0,120,4,0,0,80,"Glorious Gladius","","<span style='font-size: 14px;color:#ff0000;font-weight: bold'>[ONLY PvP/BG/WoE]</span><br><b style='color:#ff0000;'>[+Aegis Shield]</b><br>Increases physical attack against Demi-human monster by 55% instead of 75%.<br><b style='color:#333399'>[Rogue/Stalker, Soul Linker, or Ninja]</b><br>ASPD + 5%.<br>DEX + 5<br><b>[Every Refine Level]</b><br>Increases physical attack against Demi-human monster by 1%.<br><b style='color:#333399'>[Rogue/Stalker or Ninja]</b><br>HIT + 2<br><b style='color:#333399'>[Ninja or Soul Linker]</b><br>ASPD + 1%.<br><b style='color:#333399'>[Soul Linker]</b><br>CRIT + 10<br><b>[Refine Rate 6~10]</b><br>Every Refine Level +6 and higher adds a 1% chance to inflict the bleeding status when attacking.<br><b style='color:#333399'>[Ninja]</b><br>Every Refine level +6 and higher increases MATK against Demi-human monsters by 1%.<br><b>[Refine Rate 8~10]</b><br>When using [Back Stab] or [Raid], there is a 10% chance to auto cast level 1 [Wide Bleeding].",37,75,307,20,221,106,317,15,194,1,0]
+,[1076,1,0,120,4,0,0,80,"Glorious Gladius","","Add a 2% chance of auto-casting level 1 [Lex Divina] when attacking normally or when using [Throw Shuriken].<br><span style='font-size: 14px;color:#ff0000;font-weight: bold'>[ONLY PvP/BG/WoE]</span><br><b style='color:#ff0000;'>[+Aegis Shield]</b><br>Increases physical attack against Demi-human monster by 55% instead of 75%.<br><b style='color:#333399'>[Rogue/Stalker, Soul Linker, or Ninja]</b><br>ASPD + 5%.<br>DEX + 5<br><b>[Every Refine Level]</b><br>Increases physical attack against Demi-human monster by 1%.<br><b style='color:#333399'>[Rogue/Stalker or Ninja]</b><br>HIT + 2<br><b style='color:#333399'>[Ninja or Soul Linker]</b><br>ASPD + 1%.<br><b style='color:#333399'>[Soul Linker]</b><br>CRIT + 10<br><b>[Refine Rate 6~10]</b><br>Every Refine Level +6 and higher adds a 1% chance to inflict the bleeding status when attacking.<br><b style='color:#333399'>[Ninja]</b><br>Every Refine level +6 and higher increases MATK against Demi-human monsters by 1%.<br><b>[Refine Rate 8~10]</b><br>When using [Back Stab] or [Raid], there is a 10% chance to auto cast level 1 [Wide Bleeding].",37,75,307,20,317,15,194,1,0]
 ,[1077,2,0,140,4,0,0,80,"Glorious Flamberge","","<span style='font-size: 14px;color:#ff0000;font-weight: bold'>[ONLY PvP/BG/WoE]</span><br><b style='color:#ff0000;'>[+Aegis Shield]</b><br>Increases physical attack against Demi-human monster by 55% instead of 75%.<br><b>[Every Refine Level]</b><br>Increases physical attack against Demi-human monster by 1%.<br>Adds 1% Defense Pierce to the Demi-human monster.<br>ASPD + 1%.<br>Increases damage done with [Bash], [Mammonite], and [Back Stab] by 2%.<br><b>[Refine Rate 6~10]</b><br><b style='color:#333399'>[Swordsman Class]</b><br>Add a chance of auto-casting level 1 [Critical Wounds] when using [Bash]. Every refine level +5 and over adds a 1% chance.<br><b style='color:#333399'>[Merchant Class]</b><br>Add a chance of auto-casting level 1 [Critical Wounds] when using [Mammonite]. Every refine level +5 and over adds a 1% chance.<br><b style='color:#333399'>[Rogue Class]</b><br>Add a chance of auto-casting level 1 [Critical Wounds] when using [Back Stab]. Every refine level +5 and over adds a 1% chance.<br><b>[Refine Rate 9~10]</b><br>[Critical Wounds] on [Bash], [Mammonite], or [Back Stab] level becomes 2.",37,75,307,20,194,1,0]
 ,[1078,2,0,130,4,0,0,80,"Glorious Rapier","","<span style='font-size: 14px;color:#ff0000;font-weight: bold'>[ONLY PvP/BG/WoE]</span><br>Every time you attack you gain 3 SP.<br><b>[Every Refine Level]</b><br>INT + 1<br><b>[Refine Rate 7~10]</b><br>Reduces SP consumption of skills by 10%.",89,10,194,1,0]
 ,[1079,2,113,150,4,0,0,80,"Glorious Holy Avenger","","<span style='font-size: 14px;color:#ff0000;font-weight: bold'>[ONLY PvP/BG/WoE]</span><br><b style='color: #333399;'>Crusader ONLY</b><br><b style='color:#ff0000;'>[+Aegis Shield]</b><br>MATK + 5%<br>ASPD + 5%<br>ASPD + 2% per refine level<br>Double the effects of [Grand Cross] cast time reduction on this weapon.<br><b>[Every Refine Level]</b><br>Decrease [Grand Cross] cast time by 1%.<br>Adds a 1% chance of auto-casting Level 1 [Lex Divina] when using [Pressure].<br><b>[Refine Rate 7~10]</b><br>Reduces SP consumption of skills by 10%.",4,5,89,15,7162,5,194,1,0]
-,[1080,3,0,230,4,0,0,80,"Glorious Claymore","","<span style='font-size: 14px;color:#ff0000;font-weight: bold'>[ONLY PvP/BG/WoE]</span><br><b>[Every Refine Level]</b><br>Adds 1% defense bypassing on Demi-human monster.<br>Adds 1% more damage with [Bowling Bash] and [Charge Attack].<br>Adds 3% less cast time with [Charge Attack].<br><b>[Refine Rate 6~10]</b><br>Every refine level +6 and over adds 10% less cast time with [Bowling Bash].",37,80,307,25,194,1,0]
+,[1080,3,0,230,4,0,0,80,"Glorious Claymore","","<span style='font-size: 14px;color:#ff0000;font-weight: bold'>[ONLY PvP/BG/WoE]</span><br><b>[Every Refine Level]</b><br>Adds 1% defense bypassing on Demi-human monster.<br>Adds 1% more damage with [Bowling Bash] and [Charge Attack].<br>Adds 3% less cast time with [Charge Attack].<br><b>[Refine Rate 6~10]</b><br>Every refine level +6 and over adds 10% less cast time with [Bowling Bash].",37,80,307,20,194,1,0]
 ,[1081,4,0,90,4,0,0,80,"Glorious Spear","","<span style='font-size: 14px;color:#ff0000;font-weight: bold'>[ONLY PvP/BG/WoE]</span><br><b style='color:#ff0000;'>[+Aegis Shield]</b><br>Increases physical attack against Demi-human monster by 65% instead of 95%.<br><b>[Every Refine Level]</b><br>Adds 1% defense bypassing on Demi-human monster.<br>ASPD + 1%.<br><b style='color: #333399;'>[Knight/Lord Knight]</b><br>Add a 1% chance to auto-cast to auto-cast level 1 [Critical Wounds] after using [Pierce].<br><b style='color: #333399;'>[Crusader/Paladin]</b><br>Add a 1% chance to auto-cast [Heal] at the level learned after using [Shield Chain]. If not learned, level 1 is used.",37,95,307,20,12,5,194,1,0]
 ,[1082,5,0,220,4,0,0,80,"Glorious Lance","","<span style='font-size: 14px;color:#ff0000;font-weight: bold'>[ONLY PvP/BG/WoE]</span><br><b style='color:#333399'>[Crusader/Paladin]</b><br>Increases physical attack against Demi-human monster by 65% instead of 95%.<br>Pierce all defense of Demi-human monster instead of 20% defense bypass.<br><b>[Every Refine Level]</b><br>ASPD + 1%.<br><b style='color:#333399'>[Knight/Lord Knight]</b><br>Adds 1% defense bypassing on Demi-human monster.<br>Adds a 1% chance to auto-cast level 2 [Critical Wounds] after using [Pierce].<br><b style='color:#333399'>[Crusader/Paladin]</b><br>Increases physical attack against Demi-human monster by 2%.<br>Adds a 1% chance to auto-cast level 1 [Pressure] when attacking normally.",37,95,307,20,57,20,194,1,0]
 ,[1083,9,0,70,4,0,0,80,"Glorious Staff Of Destruction","","<span style='font-size: 14px;color:#ff0000;font-weight: bold'>[ONLY PvP/BG/WoE]</span><br><b>[Every Refine Level]</b><br>Adds 1% magical defense bypassing on Demi-human monster.<br>Decrease Cast Time by 2%.<br>There is a 1% chance to auto-cast [Amplify Magic Attack] when using magic attacks. For Wizard Class, it uses the level learned. Otherwise, it uses the refine rate as level.<br><b>[Refine Rate 5~10]</b><br>There is a 5% chance to add ASPD + 50% after using [Jupitel Thunder] for 5 seconds. Every refine level past +5 adds an additional 1% chance.<br><b>[Refine Rate 7~10]</b><br>Add a 5% chance to gain Uninterruptible Casting for 10 seconds when being attacked.",5,5,89,15,177,10,317,20,194,1,195,1,0]
@@ -3723,9 +3723,9 @@ function Item_Setumei(nC1,nC2)
 	if(77 == nC1)
 		CBIstr += "Bosstype monster resistance " + wIS + nC2 +"%<BR>";
 	if(78 == nC1)
-		CBIstr += "Adjusts your resistance to ranged attacks by "+ wIS + nC2 +"%<BR>";
+		CBIstr += "Resistance against ranged attacks" + wIS + nC2 +"%<BR>";
 	if(79 == nC1)
-		CBIstr += "Adjusts your resistance to normal monsters by "+ wIS + nC2 +"%<BR>";
+		CBIstr += "Resistance against normal monsters" + wIS + nC2 +"%<BR>";
     /*ZoneSoldier - 6/3/2018
       Increase Damage on all monsters Boss/NonBoss by %
     */
@@ -3757,7 +3757,7 @@ function Item_Setumei(nC1,nC2)
 		CBIstr += "Healing received increased by "+ wIS + nC2 +"%<BR>";
 	if(93 == nC1)
 		CBIstr += "Heal damage increase on undead by "+ wIS + nC2 +"%<BR>";
-	if(94 == nC1 || 95 == nC1)
+	if(94 == nC1)
 		CBIstr += "Sanctuary effectiveness increased by "+ wIS + nC2 +"%<BR>";
 	if(96 == nC1)
 		CBIstr += "Sanctuary damage effectiveness against Demon increased by "+ wIS + nC2 +"%<BR>";
@@ -3784,7 +3784,7 @@ function Item_Setumei(nC1,nC2)
 	if(194 == nC1)
 		CBIstr += "Cannot be broken<BR>";
 	if(195 == nC1)
-		CBIstr += "Two-Handed Staff<BR>";
+		CBIstr += "<b>Two-Handed Staff</b><BR>";
 	if(198 == nC1)
 		CBIstr += "Armor becomes "+ ZokuseiOBJ[nC2] +" element<BR>";
 	if(212 <= nC1 && nC1 <= 215)
